@@ -1,10 +1,13 @@
 #! /bin/sh
 
-# Copyright (C) 2009 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2009-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-TEXMFCNF=$srcdir/../kpathsea WEBINPUTS=$srcdir/cftests \
-  ./otangle cftest cftest || exit 1
+rm -rf ocftest.*
+cp $srcdir/cftests/cftest.web ./ocftest.web
 
-diff cftest.p $srcdir/cftests/ocftest.p || exit 1
+TEXMFCNF=$srcdir/../kpathsea WEBINPUTS=.:$srcdir/cftests \
+  ./otangle ocftest cftest || exit 1
+
+diff ocftest.p $srcdir/cftests/ocftest.p || exit 1
 
