@@ -1,14 +1,14 @@
 #! /bin/sh
 
-# Copyright (C) 2011 Peter Breitenlohner <tex-live@tug.org>
+# Copyright (C) 2011-2013 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
-rm -rf wprob.*
-cp $srcdir/tests/wprob.tex .
+rm -rf pwprob.*
+cp $srcdir/tests/wprob.tex ./pwprob.tex
 
 TEXMFCNF=$srcdir/../kpathsea \
-	./pdftex --ini --etex --file-line-error --interaction=nonstopmode wprob.tex
+	./pdftex --ini --etex --file-line-error --interaction=nonstopmode pwprob.tex
 
-grep '^\./wprob\.tex:12: Could not open file NoSuchFile\.eps\.$' \
-	wprob.log || exit 1
+grep '^\./pwprob\.tex:12: Could not open file NoSuchFile\.eps\.$' \
+	pwprob.log || exit 1
 
