@@ -1,3 +1,8 @@
+2013-01-24  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* wprob.test: Avoid spurious failure of parallel-tests.
+	* am/pdftex.am: Renamed wprob.{tex,log} => pwprob.{tex,log}.
+
 2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* macnames.c, pdftex-common.h, pdftoepdf.cc, ttf2afm.c,
